# multiplex

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  security-reliability.md  security.md  spec.yaml  sqlx-data.json
.github/workflows/: audit.yml  general.yml  master.yml
bbs/: .env  Cargo.toml  diesel.toml
bbs/migrations/2023-06-06-000238_bbs/: down.sql  up.sql
bbs/migrations/2023-06-06-031848_init/: down.sql
bbs/migrations/2023-06-06-220759_init/: down.sql  up.sql
bbs/migrations/2023-06-06-224200_rename_threads_to_boards/: down.sql  up.sql
bbs/migrations/2023-06-06-224636_rename_thread_id_field_in_bbs/: down.sql  up.sql
bbs/migrations/2023-06-06-230508_rename_board_id_and_board_title/: down.sql  up.sql
bbs/migrations/2023-06-06-230903_rename_many_fields_for_most_tables/: down.sql  up.sql
bbs/res/: bbs.sql  bbs.yaml
bbs/src/: lib.rs  models.rs  schema.rs
bbs/tests/: integration_test.rs
common/: Cargo.toml
common/src/: lib.rs
common/tests/: health_check.rs
configuration/: base.yaml  production.yaml
migrations/: 20230614202331_create_subscriptions_table.sql  20230619173655_make_status_not_null_in_subscriptions_for_past_records.sql  20230619203331_create_subscription_tokens_table.sql  20230628142612_seed_user.sql  20230629214743_remove_previous_admin_and_add_new_one.sql  20230629215201_fix_admin_password.sql  20230630233020_create_idempotency_table.sql  20230701030946_relax_null_checks_on_idempotency.sql  20230701163124_create_newsletter_issues_table.sql  20230701163800_create_issue_delivery_queue_table.sql  20230702201652_update_default_admin_info.sql
multiplexer/: Cargo.toml  cfg.toml
multiplexer/src/: cfg.rs  configuration.rs  lib.rs  main.rs
multiplexer/tests/: greeting.rs  health_check.rs  subscription_tests.rs
multiplexer/tests/common/: mod.rs
newsletter/: .env  Cargo.toml  cfg.toml
newsletter/migrations/: 20230611045602_create_subscriptions_table.sql
newsletter/src/: cfg.rs  lib.rs
newsletter/tests/: subscription_tests.rs
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletters/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  send_newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
