[package]
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"
name = "multiplex"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "multiplex"
path = "src/main.rs"

[dependencies]
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
anyhow = "1.0.40"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
log = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.115"
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.6", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-actix-rustls",
    "uuid",
] }
thiserror = "1.0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
unicode-segmentation = "1.7.1"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7.0"
fake = "~2.3.0"
linkify = "0.9"
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.61"
serde_urlencoded = "0.7.1"
wiremock = "0.5"
