[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"], default-features = false }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
