[package]
name = "multiplexer"
version = "0.1.0"
authors = ["Ji Park <ji@jipark.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "multiplexer"
path = "src/main.rs"

[dependencies]
actix-web = "4"
bbs = { path = "../bbs" }
newsletter = { path = "../newsletter" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.17.0"
