[package]
name = "multiplexer"
version = "0.1.0"
authors = ["Ji Park <ji@jipark.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "multiplexer"
path = "src/main.rs"

[dependencies]
bbs = { path = "../bbs" }
newsletter = { path = "../newsletter" }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.17.0"
